# AndroidSample

./: README.md
OpenCvSample/: README.md  settings.gradle
OpenCvSample/app/: build.gradle
OpenCvSample/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
OpenCvSample/app/src/main/java/com/example/opencvsample/: MainActivity.java
OpenCvSample/app/src/main/res/layout/: activity_main.xml
OpenCvSample/app/src/main/res/values/: strings.xml
OpenCvSample/gradle/wrapper/: gradle-wrapper.properties
OpenCvSample/opencv4java/: build.gradle
OpenCvSample/opencv4java/src/androidTest/java/com/example/opencv4java/: ExampleInstrumentedTest.java
OpenCvSample/opencv4java/src/main/: AndroidManifest.xml
OpenCvSample/opencv4java/src/main/java/com/example/opencv4java/: MainActivity.java
OpenCvSample/opencv4java/src/main/res/layout/: activity_main.xml
OpenCvSample/opencv4java/src/main/res/values/: strings.xml
OpenCvSample/opencv4java/src/test/java/com/example/opencv4java/: ExampleUnitTest.java
